--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-barbicanclient (2.2.1-2) UNRELEASED; urgency=medium
+
+  * Do not run unit tests on Python 2.6.
+
+ -- Thomas Goirand <zigo@debian.org>  Sat, 20 Sep 2014 18:25:19 +0800
+
 python-barbicanclient (2.2.1-1) unstable; urgency=medium
 
   * Initial release. (Closes: #760632)
