--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-barbicanclient (3.2.0-1) experimental; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Goirand <zigo@debian.org>  Thu, 16 Jul 2015 20:37:25 +0000
+
 python-barbicanclient (3.0.3-1) unstable; urgency=medium
 
   * Do not run unit tests on Python 2.6.
