--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-barbicanclient (3.0.3-2) unstable; urgency=medium
+
+  * Disabled tests which fails with python-mock >= 1.3 (Closes: #795128).
+
+ -- Thomas Goirand <zigo@debian.org>  Tue, 25 Aug 2015 14:32:38 +0000
+
 python-barbicanclient (3.0.3-1) unstable; urgency=medium
 
   * Do not run unit tests on Python 2.6.
