--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-barbicanclient (3.3.0-1) experimental; urgency=medium
 
   * New upstream release.
+  * Fixed (build-)depends for this release.
 
  -- Thomas Goirand <zigo@debian.org>  Sun, 06 Sep 2015 23:43:31 +0200
 
