--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-barbicanclient (3.3.0-2) experimental; urgency=medium
+
+  * Added Python3 support.
+
+ -- Thomas Goirand <zigo@debian.org>  Tue, 08 Sep 2015 21:32:26 +0000
+
 python-barbicanclient (3.3.0-1) experimental; urgency=medium
 
   * New upstream release.
