--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-barbicanclient (3.3.0-3) unstable; urgency=medium
+
+  * Uploading to unstable.
+
+ -- Thomas Goirand <zigo@debian.org>  Thu, 15 Oct 2015 21:27:22 +0000
+
 python-barbicanclient (3.3.0-2) experimental; urgency=medium
 
   * Added Python3 support.
