--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-barbicanclient (4.0.0-1) experimental; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Goirand <zigo@debian.org>  Mon, 21 Mar 2016 11:20:00 +0100
+
 python-barbicanclient (3.3.0-3) unstable; urgency=medium
 
   * Uploading to unstable.
