Fixed (build-)depends for this release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-barbicanclient (4.0.0-1) experimental; urgency=medium
 
   * New upstream release.
+  * Fixed (build-)depends for this release.
 
  -- Thomas Goirand <zigo@debian.org>  Mon, 21 Mar 2016 11:20:00 +0100
 
