Correctly run unit tests for available Py3 versions.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ python-barbicanclient (4.0.0-1) experimental; urgency=medium
   * Fixed (build-)depends for this release.
   * Standards-Version: 3.9.7 (no change).
   * HTTPS VCS URLs.
+  * Correctly run unit tests for available Py3 versions.
 
  -- Thomas Goirand <zigo@debian.org>  Mon, 21 Mar 2016 11:20:00 +0100
 
