--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ python-barbicanclient (4.0.0-1) experimental; urgency=medium
   * Standards-Version: 3.9.7 (no change).
   * HTTPS VCS URLs.
   * Correctly run unit tests for available Py3 versions.
+  * Fixed debian/copyright ordering.
 
  -- Thomas Goirand <zigo@debian.org>  Mon, 21 Mar 2016 11:20:00 +0100
 
