--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-barbicanclient (4.0.1-1) experimental; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Goirand <zigo@debian.org>  Sat, 02 Apr 2016 14:58:32 +0200
+
 python-barbicanclient (4.0.0-1) experimental; urgency=medium
 
   * New upstream release.
