--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-barbicanclient (4.0.1-2) unstable; urgency=medium
+
+  * Uploading to unstable.
+
+ -- Thomas Goirand <zigo@debian.org>  Mon, 04 Apr 2016 11:29:23 +0000
+
 python-barbicanclient (4.0.1-1) experimental; urgency=medium
 
   * New upstream release.
