--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-barbicanclient (4.0.1-3) UNRELEASED; urgency=medium
+
+  * d/s/options: extend-diff-ignore of .gitreview
+  * d/control: Using OpenStack's Gerrit as VCS URLs.
+
+ -- Ondřej Nový <onovy@debian.org>  Mon, 26 Sep 2016 19:08:01 +0200
+
 python-barbicanclient (4.0.1-2) unstable; urgency=medium
 
   * Uploading to unstable.
