--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 python-barbicanclient (4.0.1-3) UNRELEASED; urgency=medium
 
+  [ Ondřej Nový ]
   * d/s/options: extend-diff-ignore of .gitreview
   * d/control: Using OpenStack's Gerrit as VCS URLs.
 
- -- Ondřej Nový <onovy@debian.org>  Mon, 26 Sep 2016 19:08:01 +0200
+  [ Thomas Goirand ]
+  * Fixed oslotest EPOCH.
+
+ -- Thomas Goirand <zigo@debian.org>  Wed, 28 Sep 2016 10:07:45 +0200
 
 python-barbicanclient (4.0.1-2) unstable; urgency=medium
 
