--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-barbicanclient (4.0.1-3) UNRELEASED; urgency=medium
+python-barbicanclient (4.0.1-3) unstable; urgency=medium
 
   [ Ondřej Nový ]
   * d/s/options: extend-diff-ignore of .gitreview
